--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
   <main>
     <div id="eyecatch">
       <p>機械では出来ない仕事を</p>
-      <div id="eyecatch-right">
-        <h6 class="date">2019/1/1</h6>
-        <p class="text">ニュースタイトルがここに入ります。3月の決算報告書</p>
+      <div class="news">
+        <div class="news-text-wrap">
+          <p class="date">2019/01/01</p>
+          <p class="text">ニュースタイトルがここに入ります。3月の決算報告書</p>
+        </div>
+        <div class="news-box">
+          <p class="news-title">news</p>
+        </div>
+        
       </div>
-      <p class="news">news</p>
-
     </div>
 
-    <div class="box1">
-      <div class="box1-right">
-      <img src="./img/mission-img.jpg" alt="orange" /> 
-      </div>
 
       <div class="box1-left">
         <h2 class="text">お客様の為に進化する成長企業であり続ける</h2>
