--- a/index.html
+++ b/index.html
@@ -43,17 +43,53 @@
         <div class="news-box">
           <p class="news-title">news</p>
         </div>
-        
+      </div>
+    </div>
+
+    <div class="top-under">
+      <div class="top-under-empty-box">
+      <div class="orange">
+        <img src="./img/mission-img.jpg" width="566" height="378" alt="オレンジ">
+      </div>
+      <div class="main-box">
+        <div class="main-text-box">
+        </div>
+      </div>
       </div>
     </div>
 
 
-      <div class="box1-left">
-        <h2 class="text">お客様の為に進化する成長企業であり続ける</h2>
-        <p>顧客主導型サービスを提供する企業として、お客様の会社経営に必要なサービスと情報を提供し続ける企業支援会社を目指します。企業が現在直面している「勝ち残るため」の戦略を提供できる会社として、ホームページをはじめ、各種マーケティングをご提供いたします。</p>
-        <a class="link" href="#">ミッション詳細</a>
 
+
+
+
+
+          div class="Group6" style="width: 886px; height: 268px;">
+            div class="main-text-box"
+              style="padding-top: 41px; padding-bottom: 48px; padding-left: 73px; padding-right: 40px; width: 886px; height: 268px; background-color: rgba(196, 196, 196, 0); display: inline-flex; flex-direction: column; align-items: flex-start; justify-content: flex-start;">
+              p class="お客様のために進化する成長企業であり続ける" style="width: 545px; height: 49px; font-size: 23px; text: white;">
+                お客様のために進化する成長企業であり続ける</p>
+              <div style="height: 2px;"></div>
+              <p class="顧客主導型サービスを提供する企業として、お客様の会社経営に必要なサービスと情報を提供し続ける企業支援会社を目指します。企業が現在直面している「勝ち残るため」の戦略を提供できる会社として、ホームページをはじめ、各種マーケティングをご提供いたし ます。"
+                style="width: 773px; height: 87px; font-size: 12px; line-height: 20px; text: white;">
+                顧客主導型サービスを提供する企業として、お客様の会社経営に必要なサービスと情報を提供し続ける企業支援会社を目指します。企<br />業が現在直面している「勝ち残るため」の戦略を提供できる会社として、ホームページをはじめ、各種マーケティングをご提供いたし<br />ます。
+              </p>
+              <div style="height: 2px;"></div>
+              <div class="Group5" style="width: 133px; height: 39px;">
+                <div class="mission-box"
+                  style="padding-left: 10px; padding-right: 10px; padding-top: 5px; padding-bottom: 6px; width: 133px; height: 39px; background-color: white; display: flex; flex-direction: row; align-items: center; justify-content: center;">
+                  <p class="ミッション詳細"
+                    style="width: 113px; height: 28px; font-size: 12px; line-height: 20px; text-align: center; text: black;">
+                    ミッション詳細</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+    </div>
+
+
 
 
     </div>
