--- a/index.html
+++ b/index.html
@@ -47,42 +47,62 @@
     </div>
 
     <div class="top-under">
-      <div class="top-under-empty-box">
+      <div class="top-under-empty-box"></div>
       <div class="orange">
         <img src="./img/mission-img.jpg" width="566" height="378" alt="オレンジ">
-      </div>
-      <div class="main-box">
-        <div class="main-text-box">
+        <div class="main-box">
+          <div class="main-text-box">
+            <p class="main-text1">お客様のために進化する成長企業であり続ける</p>
+            <div style="height: 2px;"></div>
+            <p class="main-text2">顧客主導型サービスを提供する企業として、お客様の会社経営に必要なサービスと情報を提供し続ける企業支援会社を目指します。企<br />業が現在直面している「勝ち残るため」の戦略を提供できる会社として、ホームページをはじめ、各種マーケティングをご提供いたし<br />ます。
+            </p>
+            <div style="height: 2px;"></div>
+              <div class="mission-box">
+                <a href="#">
+                  <p class="mission-text">ミッション詳細</p>
+                </a>
+              </div>
+          </div>
         </div>
-      </div>
-      </div>
+      </div>      
     </div>
 
 
-
-
-
-
-
-          div class="Group6" style="width: 886px; height: 268px;">
-            div class="main-text-box"
-              style="padding-top: 41px; padding-bottom: 48px; padding-left: 73px; padding-right: 40px; width: 886px; height: 268px; background-color: rgba(196, 196, 196, 0); display: inline-flex; flex-direction: column; align-items: flex-start; justify-content: flex-start;">
-              p class="お客様のために進化する成長企業であり続ける" style="width: 545px; height: 49px; font-size: 23px; text: white;">
-                お客様のために進化する成長企業であり続ける</p>
-              <div style="height: 2px;"></div>
-              <p class="顧客主導型サービスを提供する企業として、お客様の会社経営に必要なサービスと情報を提供し続ける企業支援会社を目指します。企業が現在直面している「勝ち残るため」の戦略を提供できる会社として、ホームページをはじめ、各種マーケティングをご提供いたし ます。"
-                style="width: 773px; height: 87px; font-size: 12px; line-height: 20px; text: white;">
-                顧客主導型サービスを提供する企業として、お客様の会社経営に必要なサービスと情報を提供し続ける企業支援会社を目指します。企<br />業が現在直面している「勝ち残るため」の戦略を提供できる会社として、ホームページをはじめ、各種マーケティングをご提供いたし<br />ます。
-              </p>
-              <div style="height: 2px;"></div>
-              <div class="Group5" style="width: 133px; height: 39px;">
-                <div class="mission-box"
-                  style="padding-left: 10px; padding-right: 10px; padding-top: 5px; padding-bottom: 6px; width: 133px; height: 39px; background-color: white; display: flex; flex-direction: row; align-items: center; justify-content: center;">
-                  <p class="ミッション詳細"
-                    style="width: 113px; height: 28px; font-size: 12px; line-height: 20px; text-align: center; text: black;">
-                    ミッション詳細</p>
-                </div>
-              </div>
+    <div class="center">
+      <p class="service">service</p>
+      <div class="camera">
+        <img src="./img/service2.jpg" width="720" height="500" alt="カメラ">
+        <div class="center-text-box">
+          <div class="center-text">
+            <p class="center-text1">web制作事業</p>
+            <div style="height: 7px;"></div>
+            <p class="center-text2">コーチングミッション</p>
+            <div style="height: 7px;"></div>
+            <p class="center-text3">ユーザーが求める物を分析し、ユーザビリティを備えた最適なサイトを提供。建<br />設業から美容、ブライダル、飲食店まで多種多様な業種の製作実績があります</p>
+            <div style="height: 10px;"></div>
+            <div class="service-text-box">
+              <a href="#">
+                <p class="service-text">サービス詳細</p>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div style="height: 180px;"></div>
+      <div class="fire">
+        <img src="./img/service1.jpg" width="720" height="500" alt="炎">
+        <div class="center-text-box2">
+          <div class="center-text2">
+            <p class="center-text2-1">web制作事業</p>
+            <div style="height: 7px;"></div>
+            <p class="center-text2-2">コーチングミッション</p>
+            <div style="height: 7px;"></div>
+            <p class="center-text2-3">ユーザーが求める物を分析し、ユーザビリティを備えた最適なサイトを提供。建<br />設業から美容、ブライダル、飲食店まで多種多様な業種の製作実績があります</p>
+            <div style="height: 10px;"></div>
+            <div class="service-text-box2">
+              <a href="#">
+                <p class="service-text2-1">サービス詳細</p>
+              </a>
             </div>
           </div>
         </div>
@@ -90,9 +110,56 @@
     </div>
 
 
+    <div class="under">
+      <div class="picture-box">
+        <div class="company1">
+          <img src="./img/company.jpeg" style="width: 690px; height: 250px;" alt="aaa">
+          <div class="text-company-box">
+            <p class="text-company">company</p>
+            <div style="height: 8px;"></div>
+            <p class="text-company2">会社概要</p>
+          </div>
+        </div> 
+        <div style="width: 60px;"></div>
+        <div class="recruit1">
+          <img src="./img/recruit.jpg" style="width: 690px; height: 250px;" alt="bbb">
+            <div class="text-recruit-box">
+              <p class="text-recruit">recruit</p>
+              <div style="height: 8px;"></div>
+              <p class="text-recruit2">採用情報</p>
+            </div>
+        </div>      
+      </div>
 
 
+
+      <div class="FAQ-box">
+        <p class="FAQ">FAQ</p>
+        <div style="width: 333px;"></div>
+        <p class="question">良くある質問</p>
+      </div>
     </div>
+
+    <div class="contact-box" >
+        <div class="contact-text-box">
+          <p class="contact-text-1">contact</p>
+          <div style="height: 8.25px;"></div>
+          <p class="contact-text-2">お問い合わせ</p>
+          <div style="height: 8.25px;"></div>
+          <p class="contact-text-3">お気軽にお問い合わせください。</p>
+          <div style="height: 8.25px;"></div>
+          <p class="contact-text-4"></p>
+          <div style="height: 8.25px;"></div>
+          <div class="contact-btn-box">
+            <a href="#">
+              <p class="contact-btn-text">お問い合わせへ</p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
   </main>
   <footer class="footer">
     <p class="title">estra inc.</p>
@@ -119,7 +186,12 @@
       </ul>
     </nav>
   </footer>
-      <small class="copyright">Copyright 2019 estra inc. All Rights Reserved.</small>
+  <div class="footer-sub">
+    <p class="footer-sub-text"
+      >Copyright
+      2019 estra inc. All Rights Reserved.</p>
+  </div>
 
+  
 </body>
 </html>
