--- a/index.html
+++ b/index.html
@@ -7,149 +7,145 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <header class="header">
-    <p class="title">estra inc.</p>
-    <nav>
-      <ul class="header-nav-list">
-        <a href="#">
-          <li class="header-nav-item">home</li>
-        </a>
-        <a href="#">
-          <li class="header-nav-item">about</li>
-        </a>
-        <a href="#">
-          <li class="header-nav-item">service</li>
-        </a>
-        <a href="#">
-          <li class="header-nav-item">works</li>
-        </a>
-        <a href="#">
-          <li class="header-nav-item">price</li>
-        </a>
-        <a href="#">
-          <li class="header-nav-item">contact</li>
-        </a>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <div id="eyecatch">
-      <p>機械では出来ない仕事を</p>
-      <div class="news">
-        <div class="news-text-wrap">
-          <p class="date">2019/01/01</p>
-          <p class="text">ニュースタイトルがここに入ります。3月の決算報告書</p>
-        </div>
-        <div class="news-box">
-          <p class="news-title">news</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="top-under">
-      <div class="top-under-empty-box"></div>
-      <div class="orange">
-        <img src="./img/mission-img.jpg" width="566" height="378" alt="オレンジ">
-        <div class="main-box">
-          <div class="main-text-box">
-            <p class="main-text1">お客様のために進化する成長企業であり続ける</p>
-            <div style="height: 2px;"></div>
-            <p class="main-text2">顧客主導型サービスを提供する企業として、お客様の会社経営に必要なサービスと情報を提供し続ける企業支援会社を目指します。企<br />業が現在直面している「勝ち残るため」の戦略を提供できる会社として、ホームページをはじめ、各種マーケティングをご提供いたし<br />ます。
-            </p>
-            <div style="height: 2px;"></div>
-              <div class="mission-box">
-                <a href="#">
-                  <p class="mission-text">ミッション詳細</p>
-                </a>
-              </div>
+  <div class="main">
+    <header class="header">
+      <p class="title">estra inc.</p>
+      <nav>
+        <ul class="header-nav-list">
+          <a href="#">
+            <li class="header-nav-item">home</li>
+          </a>
+          <a href="#">
+            <li class="header-nav-item">about</li>
+          </a>
+          <a href="#">
+            <li class="header-nav-item">service</li>
+          </a>
+          <a href="#">
+            <li class="header-nav-item">works</li>
+          </a>
+          <a href="#">
+            <li class="header-nav-item">price</li>
+          </a>
+          <a href="#">
+            <li class="header-nav-item">contact</li>
+          </a>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div id="eyecatch">
+        <p>機械では出来ない仕事を</p>
+        <div class="news">
+          <div class="news-text-wrap">
+            <p class="date">2019/01/01</p>
+            <p class="text">ニュースタイトルがここに入ります。3月の決算報告書</p>
           </div>
-        </div>
-      </div>      
-    </div>
-
-
-    <div class="center">
-      <p class="service">service</p>
-      <div class="camera">
-        <img src="./img/service2.jpg" width="720" height="500" alt="カメラ">
-        <div class="center-text-box">
-          <div class="center-text">
-            <p class="center-text1">web制作事業</p>
-            <div style="height: 7px;"></div>
-            <p class="center-text2">コーチングミッション</p>
-            <div style="height: 7px;"></div>
-            <p class="center-text3">ユーザーが求める物を分析し、ユーザビリティを備えた最適なサイトを提供。建<br />設業から美容、ブライダル、飲食店まで多種多様な業種の製作実績があります</p>
-            <div style="height: 10px;"></div>
-            <div class="service-text-box">
-              <a href="#">
-                <p class="service-text">サービス詳細</p>
-              </a>
-            </div>
+          <div class="news-box">
+            <p class="news-title">news</p>
           </div>
         </div>
       </div>
-      <div style="height: 180px;"></div>
-      <div class="fire">
-        <img src="./img/service1.jpg" width="720" height="500" alt="炎">
-        <div class="center-text-box2">
-          <div class="center-text2">
-            <p class="center-text2-1">web制作事業</p>
-            <div style="height: 7px;"></div>
-            <p class="center-text2-2">コーチングミッション</p>
-            <div style="height: 7px;"></div>
-            <p class="center-text2-3">ユーザーが求める物を分析し、ユーザビリティを備えた最適なサイトを提供。建<br />設業から美容、ブライダル、飲食店まで多種多様な業種の製作実績があります</p>
-            <div style="height: 10px;"></div>
-            <div class="service-text-box2">
-              <a href="#">
-                <p class="service-text2-1">サービス詳細</p>
-              </a>
+
+      <div class="top-under">
+        <div class="top-under-empty-box"></div>
+        <div class="orange">
+          <img src="./img/mission-img.jpg" width="400px" height="280px" alt="オレンジ">
+          <div class="main-box">
+            <div class="main-text-box">
+              <p class="main-text1">お客様のために進化する成長企業であり続ける</p>
+              <p class="main-text2">顧客主導型サービスを提供する企業として、お客様の会社経営に必要なサービスと情報を提供し続ける企業支援会社を目指します。企<br />業が現在直面している「勝ち残るため」の戦略を提供できる会社として、ホームページをはじめ、各種マーケティングをご提供いたし<br />ます。
+              </p>
+                <div class="mission-box">
+                  <a href="#">
+                    <p class="mission-text">ミッション詳細</p>
+                  </a>
+                </div>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-
-
-    <div class="under">
-      <div class="picture-box">
-        <div class="company1">
-          <img src="./img/company.jpeg" style="width: 690px; height: 250px;" alt="aaa">
-          <div class="text-company-box">
-            <p class="text-company">company</p>
-            <div style="height: 8px;"></div>
-            <p class="text-company2">会社概要</p>
-          </div>
-        </div> 
-        <div style="width: 60px;"></div>
-        <div class="recruit1">
-          <img src="./img/recruit.jpg" style="width: 690px; height: 250px;" alt="bbb">
-            <div class="text-recruit-box">
-              <p class="text-recruit">recruit</p>
-              <div style="height: 8px;"></div>
-              <p class="text-recruit2">採用情報</p>
-            </div>
         </div>      
       </div>
 
+      <div class="center-box"> 
+        <p class="service-text">service</p>
+        <div style="height: 33.50px;"></div>
+        <div class="camera">
+          <img src="./img/service2.jpg" style="width: 500px; height: 350px; position:absolute; top: 4%; right: 0%;" alt="camera">
+        </div>
 
-
-      <div class="FAQ-box">
-        <p class="FAQ">FAQ</p>
-        <div style="width: 333px;"></div>
-        <p class="question">良くある質問</p>
+        <div class="camera-left-box"> 
+          <div class="camera-left-text">
+            <p class="camera-text">web制作事業</p>
+            <div style="height: 20px;"></div>
+            <p class="camera-text2">コーチングのミッション</p>
+            <div style="height: 30px;"></div>
+            <p class="camera-text3">ユーザーが求める物を分析し、ユーザビリティを備えた最適なサイトを提供。建<br />設業から美容、ブライダル、飲食店まで多種多様な業種の製作実績があります</p>
+            <div style="height: 10px;"></div>
+            <div class="survice-btn1">
+              <p class="survice-btn-text1">サービス詳細</p>
+            </div>
+          </div>
+        </div>
+        <div class="fire">
+          <img src="./img/service1.jpg" style="width: 500px; height: 350px; position:absolute; top: 50%; left: 0%;"alt="camera">
+        </div>  
+        <div class="fire-right-box">
+          <div class="fire-right-text">
+            <p class="fire-text">web制作事業</p>
+            <div style="height: 20px;"></div>
+            <p class="fire-text2">
+              コーチングのミッション</p>
+            <div style="height: 30px;"></div>
+            <p class="fire-text3">ユーザーが求める物を分析し、ユーザビリティを備えた最適なサイトを提供。建<br />設業から美容、ブライダル、飲食店まで多種多様な業種の製作実績があります</p>
+            <div style="height: 10px;"></div>
+            <div class="survice-btn2">
+              <p class="survice-btn-text2">
+                サービス詳細</p>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
 
-    <div class="contact-box" >
+
+
+      <div class="under">
+        <div class="picture-box">
+          <div class="company1">
+            <img src="./img/company.jpeg" style="width: 500px; height: 160px;" alt="aaa">
+            <div class="text-company-box">
+              <p class="text-company">company</p>
+              <p class="text-company2">会社概要</p>
+            </div>
+          </div> 
+          <div style="width: 60px;"></div>
+          <div class="recruit1">
+            <img src="./img/recruit.jpg" style="width: 500px; height: 160px;" alt="bbb">
+              <div class="text-recruit-box">
+                <!-- <a href="#"> -->
+                  <p class="text-recruit">recruit</p>
+                  <p class="text-recruit2">採用情報</p>
+                </a>
+              </div>
+          </div>      
+        </div>
+
+
+
+        <div class="FAQ-box">
+          <p class="FAQ">FAQ</p>
+          <div style="width: 333px;"></div>
+          <a href="#"> 
+            <p class="question" a href="#">良くある質問</p>
+          </a>
+        </div>
+      </div>
+
+      <div class="contact-box" >
         <div class="contact-text-box">
           <p class="contact-text-1">contact</p>
-          <div style="height: 8.25px;"></div>
           <p class="contact-text-2">お問い合わせ</p>
-          <div style="height: 8.25px;"></div>
           <p class="contact-text-3">お気軽にお問い合わせください。</p>
-          <div style="height: 8.25px;"></div>
-          <p class="contact-text-4"></p>
-          <div style="height: 8.25px;"></div>
+          <p class="contact-text-4">資料請求・お問い合わせなどなんでも気軽にお問い合わせください。お仕事のご連絡もお問い合わせページに飛んでいただいて、入力フォームにご記入お願いいたします。</p>
           <div class="contact-btn-box">
             <a href="#">
               <p class="contact-btn-text">お問い合わせへ</p>
@@ -157,41 +153,39 @@
           </div>
         </div>
       </div>
+
+
+    </main>
+    <footer class="footer">
+      <p class="title">estra inc.</p>
+      <nav>
+        <ul class="footer-nav-list">
+          <a href="#">
+            <li class="footer-nav-item">home</li>
+          </a>
+          <a href="#">
+            <li class="footer-nav-item">about</li>
+          </a>
+          <a href="#">
+            <li class="footer-nav-item">service</li>
+          </a>
+          <a href="#">
+            <li class="footer-nav-item">works</li>
+          </a>
+          <a href="#">
+            <li class="footer-nav-item">price</li>
+          </a>
+          <a href="#">
+            <li class="footer-nav-item">contact</li>
+          </a>
+        </ul>
+      </nav>
+    </footer>
+    <div class="footer-sub">
+      <p class="footer-sub-text"
+        >Copyright
+        2019 estra inc. All Rights Reserved.</p>
     </div>
-
-
-  </main>
-  <footer class="footer">
-    <p class="title">estra inc.</p>
-    <nav>
-      <ul class="footer-nav-list">
-        <a href="#">
-          <li class="footer-nav-item">home</li>
-        </a>
-        <a href="#">
-          <li class="footer-nav-item">about</li>
-        </a>
-        <a href="#">
-          <li class="footer-nav-item">service</li>
-        </a>
-        <a href="#">
-          <li class="footer-nav-item">works</li>
-        </a>
-        <a href="#">
-          <li class="footer-nav-item">price</li>
-        </a>
-        <a href="#">
-          <li class="footer-nav-item">contact</li>
-        </a>
-      </ul>
-    </nav>
-  </footer>
-  <div class="footer-sub">
-    <p class="footer-sub-text"
-      >Copyright
-      2019 estra inc. All Rights Reserved.</p>
   </div>
-
-  
 </body>
 </html>
