--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <p class="date">2019/01/01</p>
             <p class="text">ニュースタイトルがここに入ります。3月の決算報告書</p>
           </div>
-          <div class="news-box">
+          <a class="news-box" href="#">
             <p class="news-title">news</p>
-          </div>
+          </a>
         </div>
       </div>
 
@@ -81,11 +81,11 @@
             <div style="height: 30px;"></div>
             <p class="camera-text3">ユーザーが求める物を分析し、ユーザビリティを備えた最適なサイトを提供。建<br />設業から美容、ブライダル、飲食店まで多種多様な業種の製作実績があります</p>
             <div style="height: 10px;"></div>
-            <div class="survice-btn1">
+            <a class="survice-btn1" href="#">
               <p class="survice-btn-text1">サービス詳細</p>
-            </div>
+            </a>
           </div>
-        </div>
+         </div>
         <div class="fire">
           <img src="./img/service1.jpg" style="width: 500px; height: 350px; position:absolute; top: 50%; left: 0%;"alt="camera">
         </div>  
@@ -98,10 +98,9 @@
             <div style="height: 30px;"></div>
             <p class="fire-text3">ユーザーが求める物を分析し、ユーザビリティを備えた最適なサイトを提供。建<br />設業から美容、ブライダル、飲食店まで多種多様な業種の製作実績があります</p>
             <div style="height: 10px;"></div>
-            <div class="survice-btn2">
-              <p class="survice-btn-text2">
-                サービス詳細</p>
-            </div>
+            <a class="survice-btn2" href="#">
+              <p class="survice-btn-text2">サービス詳細</p>
+            </a>
           </div>
         </div>
       </div>
@@ -112,20 +111,18 @@
         <div class="picture-box">
           <div class="company1">
             <img src="./img/company.jpeg" style="width: 500px; height: 160px;" alt="aaa">
-            <div class="text-company-box">
+            <a class="text-company-box" href="#">
               <p class="text-company">company</p>
               <p class="text-company2">会社概要</p>
-            </div>
+            </a>
           </div> 
           <div style="width: 60px;"></div>
           <div class="recruit1">
             <img src="./img/recruit.jpg" style="width: 500px; height: 160px;" alt="bbb">
-              <div class="text-recruit-box">
-                <!-- <a href="#"> -->
-                  <p class="text-recruit">recruit</p>
-                  <p class="text-recruit2">採用情報</p>
-                </a>
-              </div>
+              <a class="text-recruit-box" href="#">
+                <p class="text-recruit">recruit</p>
+                <p class="text-recruit2">採用情報</p>
+              </a>
           </div>      
         </div>
 
