--- a/index.html
+++ b/index.html
@@ -70,34 +70,28 @@
       <p class="service-text">service</p>
       <div style="height: 33.50px;"></div>
       <div class="camera">
-        <img src="./img/service2.jpg" style="width: 720px; height: 500px; position:absolute; top: 4%; right: 0%;" alt="camera">
+        <img src="./img/service2.jpg" style="width: 50%; height: auto; position:absolute; top: 4%; right: 0%;" alt="camera">
       </div>
 
       <div class="camera-left-box"> 
         <div class="camera-left-text">
           <p class="camera-text">web制作事業</p>
-          <div style="height: 20px;"></div>
           <p class="camera-text2">コーチングのミッション</p>
-          <div style="height: 30px;"></div>
           <p class="camera-text3">ユーザーが求める物を分析し、ユーザビリティを備えた最適なサイトを提供。建<br />設業から美容、ブライダル、飲食店まで多種多様な業種の製作実績があります</p>
-          <div style="height: 10px;"></div>
           <a class="survice-btn1" href="#">
             <p class="survice-btn-text1">サービス詳細</p>
           </a>
         </div>
       </div>
       <div class="fire">
-        <img src="./img/service1.jpg" style="width: 720px; height: 500px; position:absolute; top: 55%; left: 0%;"alt="camera">
+        <img src="./img/service1.jpg" style="width: 50%; height: auto; position:absolute; top: 55%; left: 0%;"alt="fire">
       </div>  
       <div class="fire-right-box">
         <div class="fire-right-text">
           <p class="fire-text">web制作事業</p>
-          <div style="height: 20px;"></div>
           <p class="fire-text2">
             コーチングのミッション</p>
-          <div style="height: 30px;"></div>
           <p class="fire-text3">ユーザーが求める物を分析し、ユーザビリティを備えた最適なサイトを提供。建<br />設業から美容、ブライダル、飲食店まで多種多様な業種の製作実績があります</p>
-          <div style="height: 10px;"></div>
           <a class="survice-btn2" href="#">
             <p class="survice-btn-text2">サービス詳細</p>
           </a>
@@ -109,31 +103,23 @@
 
     <div class="under">
       <div class="picture-box">
-        <div class="company1">
-          <img src="./img/company.jpeg" style="width: 690px; height: 200px;" alt="aaa">
+          <img src="./img/company.jpeg" style="width: 48%; height: 200px;" alt="aaa">
           <a class="text-company-box" href="#">
             <p class="text-company">company</p>
             <p class="text-company2">会社概要</p>
           </a>
-        </div> 
-        <div style="width: 60px;"></div>
-        <div class="recruit1">
-          <img src="./img/recruit.jpg" style="width: 690px; height: 200px;" alt="bbb">
+          <img src="./img/recruit.jpg" style="width: 48%; height: 200px;" alt="bbb">
             <a class="text-recruit-box" href="#">
               <p class="text-recruit">recruit</p>
               <p class="text-recruit2">採用情報</p>
             </a>
-        </div>      
       </div>
 
 
 
       <div class="FAQ-box">
         <p class="FAQ">FAQ</p>
-        <div style="width: 333px;"></div>
-        <a href="#"> 
-          <p class="question" a href="#">良くある質問</p>
-        </a>
+        <a class="question" href="#">良くある質問</a>
       </div>
     </div>
 
